--- a/blog.html
+++ b/blog.html
@@ -53,7 +53,7 @@
     </div>
        <div class="tab">
         <img class="image" src="male.png">
-        <h1 class="name">Venkateshwaran</h1>
+        <h1 class="name" id="n">Venkateshwaran</h1>
           <p class="title">Reg No: E 24 CS 8730</p>
         <p class="title">Blog Title:.</p>
         <button class="view">view</button>
@@ -68,7 +68,7 @@
      </div>
        <div class="tab">
         <img class="image" src="male.png">
-        <h1 class="name">Thirumurugan</h1>
+        <h1 class="name" id="n1">Thirumurugan</h1>
           <p class="title">Reg No: E 24 CS 8729</p>
         <p class="title">Blog Title:.</p>
         <button class="view">view</button>
