--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Assignment</title>
     <link rel="stylesheet" href="blog.css">
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="icon.png" type="image/png">
 </head>
 <body>
     <h1 class="welcome">WELCOME TO MY BLOGGERS PAGE</h1>
