--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
         <button class="view">view</button>
     </div>
        <div class="tab">
-        <img class="image" src="male.png">
+        <img class="image" src="thenmaran.jpg">
         <h1 class="name">Thenmaran</h1>
           <p class="title">Reg No: E 24 CS 8728</p>
         <p class="title">Blog Title:Bio-Data</p>
